--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,14 +1,66 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>auth</ion-title>
+    <ion-title>{{ isLogin ? 'Login' : 'Signup' }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-<!--  <div class="ion-text-center">-->
-<!--    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>-->
-<!--  </div>-->
-  <ion-button color="primary" (click)="onLogin()" *ngIf="!isLoading">
-    Login
-  </ion-button>
+  <!--  <div class="ion-text-center">-->
+  <!--    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>-->
+  <!--  </div>-->
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col offset-sm="3" size-sm="6">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">E-mail</ion-label>
+              <ion-input
+                  #emailCtrl="ngModel"
+                  email
+                  name="email"
+                  ngModel
+                  required
+                  type="email"></ion-input>
+            </ion-item>
+            <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
+              <ion-label>Should be valid email address.</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input
+                  #passwordCtrl="ngModel"
+                  minlength="8"
+                  name="password"
+                  ngModel
+                  required
+                  type="password">
+              </ion-input>
+            </ion-item>
+            <ion-item *ngIf="!passwordCtrl.valid && passwordCtrl.touched" lines="none">
+              <ion-label>Should be at least 8 characters.</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col offset-sm="3" size-sm="6">
+          <ion-button
+                  color="primary"
+                  expand="block"
+                  fill="clear"
+                  (click)="onSwitchAuthMode()"
+                  type="button">Switch to {{ isLogin ? 'Signup' : 'Login' }}</ion-button>
+          <ion-button
+                  (click)="onLogin()"
+                  color="primary"
+                  expand="block"
+                  [disabled]="!f.valid"
+                  type="submit">
+            Login
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
