--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -15,19 +15,12 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2">
+      <ion-col offset-sm="2" size="12" size-sm="8">
         <ion-list>
-          <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
-            <ion-item [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]">
-              <ion-thumbnail slot="start">
-                <ion-img [src]="offer.image"></ion-img>
-              </ion-thumbnail>
-              <ion-label>
-                <h1>{{ offer.title }}</h1>
-              </ion-label>
-            </ion-item>
+          <ion-item-sliding #slidingItem *ngFor="let offer of offers">
+            <app-offer-item [offer]="offer"></app-offer-item>
             <ion-item-options>
-              <ion-item-option color="secondary" (click)="onEdit(offer.id, slidingItem)">
+              <ion-item-option (click)="onEdit(offer.id, slidingItem)" color="secondary">
                 <ion-icon name="create" slot="icon-only"></ion-icon>
               </ion-item-option>
             </ion-item-options>
