--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -10,6 +10,80 @@
 </ion-header>
 
 <ion-content class="ion-text-center ion-padding">
-  <p>{{selectedPlace.description}}</p>
-  <ion-button color="primary" (click)="onBookPlace()">Book!</ion-button>
+  <form #f="ngForm" (ngSubmit)="onBookPlace()">
+    <ion-grid>
+      <ion-row>
+        <ion-col offset-sm="3" size-sm="6">
+          <ion-item>
+            <ion-label position="floating">First Name</ion-label>
+            <ion-input name="first-name" ngModel required type="text"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col offset-sm="3" size-sm="6">
+          <ion-item>
+            <ion-label position="floating">Last Name</ion-label>
+            <ion-input name="last-name" ngModel required type="text"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col offset-sm="3" size-sm="6">
+          <ion-item>
+            <ion-label position="floating">Number Of Guests</ion-label>
+            <ion-select [ngModel]="'2'" name="guest-number" required type="text">
+              <ion-select-option value="1">1</ion-select-option>
+              <ion-select-option value="2">2</ion-select-option>
+              <ion-select-option value="3">3</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col offset-sm="3" size-sm="3">
+          <ion-item>
+            <ion-label position="floating">From</ion-label>
+            <ion-datetime
+                #startDateCtrl="ngModel"
+                [max]="selectedPlace.availableTo.toISOString()"
+                [min]="selectedPlace.availableFrom.toISOString()"
+                [ngModel]="startDate"
+                display-format="MMM DD YYYY"
+                name="date-from"
+                picker-format="YY MMM DD"
+                required
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="3">
+          <ion-item>
+            <ion-label position="floating">To</ion-label>
+            <ion-datetime
+                    [max]="selectedPlace.availableTo.toISOString()"
+                    [min]="startDateCtrl.value"
+                    [ngModel]="endDate"
+                    display-format="MMM DD YYYY"
+                    name="date-to"
+                    picker-format="YY MMM DD"
+                    required
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col offset-sm="3" size-sm="6">
+          <ion-button
+                  (click)="onBookPlace()"
+                  [disabled]="!f.valid"
+                  color="primary"
+                  expand="block"
+                  type="submit">Book!
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
