--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -1,52 +1,59 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Discover places</ion-title>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Discover places</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-    <ion-segment value="all" (ionChange)="onFilterUpdate($event)">
-        <ion-segment-button value="all">All Places</ion-segment-button>
-        <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
-    </ion-segment>
-    <ion-grid>
-        <ion-row>
-            <ion-col class="ion-text-center" offset-sm="2" size="12" size-sm="8">
-                <ion-card>
-                    <ion-card-header>
-                        <ion-card-title>{{ loadedPlaces[0].title }}</ion-card-title>
-                        <ion-card-subtitle>{{ loadedPlaces[0].price | currency }} / Night</ion-card-subtitle>
-                    </ion-card-header>
-                    <ion-img [src]="loadedPlaces[0].image"></ion-img>
-                    <ion-card-content>
-                        <p>{{ loadedPlaces[0].description }}</p>
-                    </ion-card-content>
-                    <div class="ion-text-right">
-                        <ion-button [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]"
-                                    color="primary"
-                                    fill="clear">More
-                        </ion-button>
-                    </div>
-                </ion-card>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col class="ion-text-center" offset-sm="2" size="12" size-sm="8">
-                <ion-virtual-scroll [items]="listedLoadedPlaces" approx-item-height="70px">
-                    <ion-item [routerLink]="['/', 'places', 'tabs', 'discover', place.id]" detail *virtualItem="let place">
-                        <ion-thumbnail slot="start">
-                            <ion-img [src]="place.image"></ion-img>
-                        </ion-thumbnail>
-                        <ion-label>
-                            <h2>{{ place.title }}</h2>
-                            <p>{{ place.description }}</p>
-                        </ion-label>
-                    </ion-item>
-                </ion-virtual-scroll>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+  <ion-segment (ionChange)="onFilterUpdate($event)" value="all">
+    <ion-segment-button value="all">All Places</ion-segment-button>
+    <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
+  </ion-segment>
+  <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length <= 0">
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        <p>There are no bookable places right now!</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid *ngIf="relevantPlaces.length > 0">
+    <ion-row>
+      <ion-col class="ion-text-center" offset-sm="2" size="12" size-sm="8">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ loadedPlaces[0].title }}</ion-card-title>
+            <ion-card-subtitle>{{ loadedPlaces[0].price | currency }} / Night</ion-card-subtitle>
+          </ion-card-header>
+          <ion-img [src]="loadedPlaces[0].image"></ion-img>
+          <ion-card-content>
+            <p>{{ loadedPlaces[0].description }}</p>
+          </ion-card-content>
+          <div class="ion-text-right">
+            <ion-button [routerLink]="['/', 'places', 'tabs', 'discover', relevantPlaces[0].id]"
+                        color="primary"
+                        fill="clear">More
+            </ion-button>
+          </div>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="ion-text-center" offset-sm="2" size="12" size-sm="8">
+        <ion-virtual-scroll [items]="listedLoadedPlaces" approx-item-height="70px">
+          <ion-item *virtualItem="let place" [routerLink]="['/', 'places', 'tabs', 'discover', place.id]" detail>
+            <ion-thumbnail slot="start">
+              <ion-img [src]="place.image"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{ place.title }}</h2>
+              <p>{{ place.description }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-virtual-scroll>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
