--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>My offers</ion-title>
     <ion-buttons slot="primary">
-      <ion-button routerLink="/places/tabs/offer/new">
+      <ion-button routerLink="/places/tabs/offers/new">
         <ion-icon name="add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
